# lichess-time-spent

./: .gitignore  Cargo.toml  README.md  data-analysis.ipynb  requirements.txt
src/: main.rs  visitor.rs
